--- a/src/index.scss
+++ b/src/index.scss
@@ -1,13 +1,13 @@
-.KJSEditor {
+.JSEditor {
   width: 100%;
   height: 100%;
   font-family: monospace;
   position: relative;
-  .KJSTextareaWrap {
+  .JSTextareaWrap {
     height: 0;
     overflow: hidden;
   }
-  .KJSCursor {
+  .JSCursor {
     height: 20px;
     width: 1px;
     position: absolute;
@@ -24,18 +24,18 @@
       z-index: -1;
     }
   }
-  .KJSContent {
+  .JSContent {
     position: relative;
     width: calc(100% - 60px);
     height: 100%;
     overflow: auto;
     padding-left: 60px;
     outline: none;
-    .KJSLineWrapper {
+    .JSLineWrapper {
       height: 20px;
       line-height: 20px;
       display: table-row-group;
-      .KJSGutter {
+      .JSGutter {
         position: absolute;
         left: 0;
         display: inline-block;
@@ -43,7 +43,7 @@
         text-align: center;
         vertical-align: top;
       }
-      .KJSLine {
+      .JSLine {
         display: inline-block;
         margin: 0 8px 0 0;
         line-height: 1;
