--- a/src/content.scss
+++ b/src/content.scss
@@ -25,6 +25,7 @@
     position: relative;
     cursor: text;
     .JSLineWrapper {
+      position: relative;
       .JSLine {
         margin: 0 8px 0 0;
         display: table-row-group;
