--- a/src/scrollBar.scss
+++ b/src/scrollBar.scss
@@ -1,5 +1,4 @@
 .JSHorizonScroll {
-    height: 16px;
     position: absolute;
     left: 0;
     bottom: 0;
@@ -8,6 +7,7 @@
         height: 100%;
         position: absolute;
         background: rgba(255, 255, 255, .3);
+        border-radius: 6px;
         &:hover {
             background: rgba(255, 255, 255, .5);
         }
@@ -15,7 +15,6 @@
 }
 
 .JSVerticalScroll {
-    width: 16px;
     height: 100%;
     position: absolute;
     right: 0;
@@ -25,6 +24,7 @@
         width: 100%;
         position: absolute;
         background: rgba(255, 255, 255, .3);
+        border-radius: 6px;
         &:hover {
             background: rgba(255, 255, 255, .5);
         }
