--- a/src/content.scss
+++ b/src/content.scss
@@ -1,41 +1,48 @@
 .JSContent {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  outline: none;
-  .JSGutterWrapper {
-    display: inline-block;
-    vertical-align: top;
-    width: 60px;
-    user-select: none;
     position: relative;
-    .JSGutter {
-      text-align: center;
-      height: 20px;
-      line-height: 20px;
-    }
-  }
-  .JSLineWrapperHidden {
-    display: inline-block;
-    width: calc(100% - 60px);
+    width: 100%;
     height: 100%;
-    user-select: none;
     overflow: hidden;
-    position: relative;
-    cursor: text;
-    .JSLineWrapper {
-      position: relative;
-      .JSLine {
-        margin: 0 8px 0 0;
-        display: table-row-group;
-        white-space: nowrap;
-        height: 20px;
-        line-height: 20px;
-        .JSLineSpan {
-          position: relative;
+    outline: none;
+    .JSGutterWrapper {
+        display: inline-block;
+        vertical-align: top;
+        width: 60px;
+        user-select: none;
+        position: relative;
+        .JSGutter {
+            text-align: center;
+            height: 20px;
+            line-height: 20px;
         }
-      }
     }
-  }
+    .JSLineWrapperHidden {
+        display: inline-block;
+        width: calc(100% - 60px);
+        height: 100%;
+        user-select: none;
+        overflow: hidden;
+        position: relative;
+        cursor: text;
+        .JSLineWrapperBackground {
+            width: 1e+06px;
+            height: 1e+06px;
+            overflow: hidden;
+            .JSLineWrapper {
+                position: relative;
+                width: 687px;
+                .JSLine {
+                    margin: 0 8px 0 0;
+                    // display: table-row-group;
+                    width: 100%;
+                    white-space: nowrap;
+                    height: 20px;
+                    line-height: 20px;
+                    .JSLineSpan {
+                        position: relative;
+                    }
+                }
+            }
+        }
+    }
 }
