--- a/src/content.scss
+++ b/src/content.scss
@@ -18,19 +18,18 @@
     }
     .JSLineWrapperHidden {
         display: inline-block;
-        width: calc(100% - 60px);
         height: 100%;
         user-select: none;
-        overflow: hidden;
         position: relative;
         cursor: text;
+        overflow: hidden;
         .JSLineWrapperBackground {
             width: 1e+06px;
             height: 1e+06px;
-            overflow: hidden;
             .JSLineWrapper {
-                position: relative;
-                width: 687px;
+                position: absolute;
+                // width: 687px;
+                // height:920px;
                 .JSLine {
                     margin: 0 8px 0 0;
                     // display: table-row-group;
@@ -38,6 +37,7 @@
                     white-space: nowrap;
                     height: 20px;
                     line-height: 20px;
+                    position: absolute;
                     .JSLineSpan {
                         position: relative;
                     }
