增加当鼠标处于竖滚动条边上并当前行可以滑动时，自动滑动功能

--- a/src/content.scss
+++ b/src/content.scss
@@ -31,7 +31,7 @@
                 // width: 687px;
                 // height:920px;
                 .JSLine {
-                    margin: 0 8px 0 0;
+                    // margin: 0 8px 0 0;
                     // display: table-row-group;
                     width: 100%;
                     white-space: nowrap;
